tests/baselines/reference/parserSwitchStatement1.d.errors.txt
==== tests/cases/compiler/parserSwitchStatement1.d.ts (2 errors) ====
    switch (foo) {
    ~~~~~~
!!! parserSwitchStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
            ~~~
!!! parserSwitchStatement1.d.ts(1,9): error TS2095: Cannot find name 'foo'.
    }